app/deployment/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rh-kb-chatbot
  labels:
    app: rh-kb-chatbot
spec:
  ports:
  - name: http
    protocol: TCP
    port: 5000
    targetPort: 5000
  selector:
    app: rh-kb-chatbot
  sessionAffinity: None
  type: ClusterIP
